complete file score and refactore score api